<resources>
    <string name="app_name"> Tera System mobile HRIS</string>

    <!--  login  -->
    <string name="login">Login</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>

    <!--  time log  -->
    <string name="date">DATE</string>
    <string name="in">IN</string>
    <string name="out">OUT</string>
    <string name="type">Type</string>
    <string name="you_have_successfully_save_the_following_details">You have successfully saved the following details:</string>
    <string name="time">Time</string>
    <string name="time_in">Time In</string>
    <string name="ok">OK</string>
    <string name="no_of_days">NO. OF DAYS</string>
    <string name="leaves_used">Leaves Used:</string>
    <string name="leaves_remaining">Leaves Remaining:</string>
    <string name="time_in_office">Time in Office</string>
    <string name="to">to</string>
    <string name="you_were_on">You were on</string>
    <string name="break_time">Break Time</string>

    <!--  profile  -->
    <string name="name">Name</string>
    <string name="id_number">ID Number</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="update">Update</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="optional">Optional</string>
    <string name="landline">Landline</string>

    <!--  bottomnavbar  -->
    <string name="profile">Profile</string>
    <string name="clients">Clients</string>
    <string name="leaves">Leaves</string>
    <string name="time_logs">Time Logs</string>

    <!--  toolbar and success  -->
    <string name="updateProfileSuccess">You have successfully updated your profile!</string>
    <string name="addTimeLogSuccess">You have successfully saved the following details:</string>
    <string name="fileLeaveSuccess">You have successfully saved the following details:</string>
    <string name="logout">Logout</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success</string>
    <string name="apiCallLoading"> Retrieving data from the server </string>

    <!--  leaves  -->
    <string name="file_leave">File Leave</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="date_">Date</string>
    <string name="select_date">Select date</string>
    <string name="sick_leave">Sick Leave</string>
    <string name="vacation_leave">Vacation Leave</string>

    <!--  update profile error messages  -->
    <string name="first_name_error"> First name can not be empty or contain special characters and/or numbers. </string>
    <string name="last_name_error"> Last name can not be empty or contain special characters and/or numbers. </string>
    <string name="middle_name_error"> Middle name can not contain special characters and/or numbers. </string>
    <string name="mobile_number_error"> Invalid mobile phone number. </string>
    <string name="email_address_error"> Invalid email address. </string>
    <string name="landline_number_error"> Invalid landline number, please use this format
        \n (2 digit Area code + 8 + 7 digit number) </string>

    <!--  API Errors  -->
    <string name="network_error"> Error connecting to the server, please check your internet connection
        or try again later.</string>
    <string name="timeout_error"> Connection timed out, please check your internet connection or try again later.</string>
</resources>