<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/layout_margin"
        android:paddingVertical="@dimen/layout_margin"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/timeIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/views_margin"
            android:layout_weight="1"
            android:text="@string/in"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/timeOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/out"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>